@@ -23,6 +23,7 @@ export(
        plot.coastline,
        plot.ctd,
        plot.ctd.scan,
+       plot.etopo2,
        plot.profile,
        plot.sealevel,
        plot.section,
@@ -33,6 +34,7 @@ export(
        processing.log.summary,
        read.coastline,
        read.ctd,
+       read.etopo2,
        read.lobo,
        read.oce,
        read.sealevel,
@@ -67,6 +69,7 @@ export(
 
 S3method(plot, ctd)
 S3method(plot, coastline)
+S3method(plot, etopo2)
 S3method(plot, lobo)
 S3method(plot, sealevel)
 S3method(plot, section)
@@ -75,6 +78,7 @@ S3method(predict, tide)
 S3method(plot, windrose)
 S3method(summary, ctd)
 S3method(summary, coastline)
+S3method(summary, etopo2)
 S3method(summary, lobo)
 S3method(summary, sealevel)
 S3method(summary, section)
